The pull transport copies the local connection module but runs the setup module before running any plays. This lets us limit pull actions by any of localhost's facts

--- a/examples/ansible.cfg
+++ b/examples/ansible.cfg
@@ -134,4 +134,5 @@ ssh_args=-o PasswordAuthentication=no -o ControlMaster=auto -o ControlPersist=60
 
 #scp_if_ssh=True
 
-
+[pull_connection]
+pull_subset_facts = ansible_fqdn, ansible_ipv4_addresses, ansible_hostname
